CirrOS image updated

--- a/roles/glance_init/vars/main.yml
+++ b/roles/glance_init/vars/main.yml
@@ -1,2 +1,2 @@
-img_name: CirrOS_0.3.2
-img_url: http://cdn.download.cirros-cloud.net/0.3.2/cirros-0.3.2-x86_64-disk.img
+img_name: CirrOS_0.3.3
+img_url: http://download.cirros-cloud.net/0.3.3/cirros-0.3.3-x86_64-disk.img
