Major update to kilo using debian backported packages

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Ensure sources.list file is properly defined ({{ repo_fqdn }})
+- name: Ensure sources.list file is properly defined 
   template: >
     src=etc/apt/sources.list
     dest=/etc/apt/sources.list
