--- a/roles/glanceserver/templates/etc/glance/glance-registry.conf
+++ b/roles/glanceserver/templates/etc/glance/glance-registry.conf
@@ -29,6 +29,11 @@ backlog = 4096
 # package.
 #data_api = glance.db.sqlalchemy.api
 
+# The number of child process workers that will be
+# created to service Registry requests. The default will be
+# equal to the number of CPUs available. (integer value)
+#workers = None
+
 # Enable Registry API versions individually or simultaneously
 #enable_v1_registry = True
 #enable_v2_registry = True
@@ -44,14 +49,17 @@ limit_param_default = 25
 # Role used to identify an authenticated user as administrator
 #admin_role = admin
 
-# Whether to automatically create the database tables.
-# Default: False
-#db_auto_create = False
-
 # Enable DEBUG log messages from sqlalchemy which prints every database
 # query and response.
 # Default: False
 #sqlalchemy_debug = True
+
+# http_keepalive option. If False, server will return the header
+# "Connection: close", If True, server will return "Connection: Keep-Alive"
+# in its responses. In order to close the client socket connection
+# explicitly after the response is sent and read successfully by the client,
+# you simply have to set this option to False when you create a wsgi server.
+#http_keepalive = True
 
 # ================= Syslog Options ============================
 
@@ -73,6 +81,69 @@ limit_param_default = 25
 # CA certificate file to use to verify connecting clients
 #ca_file = /path/to/cafile
 
+# ============ Notification System Options =====================
+
+# Driver or drivers to handle sending notifications. Set to
+# 'messaging' to send notifications to a message queue.
+notification_driver = noop
+
+# Default publisher_id for outgoing notifications.
+# default_publisher_id = image.localhost
+
+# Messaging driver used for 'messaging' notifications driver
+# rpc_backend = 'rabbit'
+
+# Configuration options if sending notifications via rabbitmq (these are
+# the defaults)
+rabbit_host = {{ controller_ip }}
+rabbit_port = 5672
+rabbit_use_ssl = false
+rabbit_userid = {{ rabbit_user }}
+rabbit_password = {{ rabbit_password }}
+rabbit_virtual_host = /
+rabbit_notification_exchange = glance
+rabbit_notification_topic = notifications
+rabbit_durable_queues = False
+
+# Configuration options if sending notifications via Qpid (these are
+# the defaults)
+qpid_notification_exchange = glance
+qpid_notification_topic = notifications
+qpid_hostname = localhost
+qpid_port = 5672
+qpid_username =
+qpid_password =
+qpid_sasl_mechanisms =
+qpid_reconnect_timeout = 0
+qpid_reconnect_limit = 0
+qpid_reconnect_interval_min = 0
+qpid_reconnect_interval_max = 0
+qpid_reconnect_interval = 0
+qpid_heartbeat = 5
+# Set to 'ssl' to enable SSL
+qpid_protocol = tcp
+qpid_tcp_nodelay = True
+
+
+# =============== Policy Options ==============================
+
+[oslo_policy]
+# The JSON file that defines policies.
+# Deprecated group/name - [DEFAULT]/policy_file
+#policy_file = policy.json
+
+# Default rule. Enforced when a requested rule is not found.
+# Deprecated group/name - [DEFAULT]/policy_default_rule
+#policy_default_rule = default
+
+# Directories where policy configuration files are stored.
+# They can be relative to any directory in the search path
+# defined by the config_dir option, or absolute paths.
+# The file defined by policy_file must exist for these
+# directories to be searched.
+# Deprecated group/name - [DEFAULT]/policy_dirs
+#policy_dirs = policy.d
+
 # ================= Database Options ==========================
 
 [database]
@@ -91,7 +162,6 @@ limit_param_default = 25
 # Deprecated group/name - [DEFAULT]/sql_connection
 # Deprecated group/name - [DATABASE]/sql_connection
 # Deprecated group/name - [sql]/connection
-#connection = sqlite:////var/lib/glance/glancedb
 connection =  mysql://glance:{{ glance_db_password }}@{{ controller_ip }}/glance
 
 # The SQL mode to be used for MySQL sessions. This option,
@@ -173,10 +243,14 @@ connection =  mysql://glance:{{ glance_db_password }}@{{ controller_ip }}/glance
 #db_max_retries = 20
 
 [keystone_authtoken]
-identity_uri = http://{{ controller_ip }}:35357
-admin_tenant_name = service
-admin_user = glance
-admin_password = {{ glance_identity_password }}
+auth_uri = http://{{ controller_ip }}:5000
+auth_url = http://{{ controller_ip }}:35357
+auth_plugin = password
+project_domain_id = default
+user_domain_id = default
+project_name = service
+username = glance
+password = {{ glance_identity_password }}
 
 [paste_deploy]
 # Name of the paste configuration file that defines the available pipelines
@@ -187,3 +261,10 @@ admin_password = {{ glance_identity_password }}
 # [pipeline:glance-registry-keystone], you would configure the flavor below
 # as 'keystone'.
 flavor = keystone
+
+[profiler]
+# If False fully disable profiling feature.
+#enabled = False
+
+# If False doesn't trace SQL requests.
+#trace_sqlalchemy = False
