--- a/roles/novaserver/templates/etc/nova/nova.conf
+++ b/roles/novaserver/templates/etc/nova/nova.conf
@@ -65,7 +65,7 @@ my_ip = {{ ansible_eth1.ipv4.address }}
 # osapi_volume, but if you want to run cinder, do not
 # activate it.
 # The list of API is: ec2,osapi_compute,metadata,osapi_volume
-enabled_apis=ec2,osapi_compute,metadata
+enabled_apis = ec2,osapi_compute,metadata
 
 # NOVA API #
 # # # # #  #
@@ -128,8 +128,6 @@ metadata_listen=0.0.0.0
 ########
 #resume_guests_state_on_host_boot=false
 instance_name_template="instance-%08x"
-# Inject the admin password at boot time, without an agent.
-#libvirt_inject_password=false
 
 ########
 # LOGS #
@@ -141,7 +139,6 @@ debug={{ log_debug }}
 # SYSTEM #
 ##########
 state_path=/var/lib/nova
-lock_path=/var/lock/nova
 rootwrap_config=/etc/nova/rootwrap.conf
 #memcached_servers=<None>
 
@@ -156,57 +153,9 @@ auth_strategy=keystone
 #############
 #scheduler_driver=nova.scheduler.filter_scheduler.FilterScheduler
 
-####################
-# VOLUMES / CINDER #
-####################
-# The full class name of the volume API class to use (string value)
-volume_api_class=nova.volume.cinder.API
-
-# Allow to perform insecure SSL requests to cinder (boolean value)
-#cinder_api_insecure=false
-
-# Allow attach between instance and volume in different
-# availability zones. (boolean value)
-#cinder_cross_az_attach=true
-
-# Libvirt handlers for remote volumes. (list value)
-#libvirt_volume_drivers=iscsi=nova.virt.libvirt.volume.LibvirtISCSIVolumeDriver,local=nova.virt.libvirt.volume.LibvirtVolumeDriver,fake=nova.virt.libvirt.volume.LibvirtFakeVolumeDriver,rbd=nova.virt.libvirt.volume.LibvirtNetVolumeDriver,sheepdog=nova.virt.libvirt.volume.LibvirtNetVolumeDriver,nfs=nova.virt.libvirt.volume.LibvirtNFSVolumeDriver,aoe=nova.virt.libvirt.volume.LibvirtAOEVolumeDriver,glusterfs=nova.virt.libvirt.volume.LibvirtGlusterfsVolumeDriver,fibre_channel=nova.virt.libvirt.volume.LibvirtFibreChannelVolumeDriver,scality=nova.virt.libvirt.volume.LibvirtScalityVolumeDriver
-
-############
-# RABBITMQ #
-############
-rabbit_host = {{ controller_ip }}
-#fake_rabbit=false
-#rabbit_virtual_host=/
-rabbit_userid = "{{ rabbit_user }}"
-rabbit_password = "{{ rabbit_password }}"
-#rabbit_port=5672
-#rabbit_use_ssl=false
-#rabbit_retry_interval=1
 # The messaging module to use, defaults to kombu (works for rabbit).
 # You can also use qpid: nova.rpc.impl_qpid
-rpc_backend = nova.openstack.common.rpc.impl_kombu
-
-##########
-# GLANCE #
-##########
-glance_host={{ controller_ip }}
-glance_port=9292
-#glance_protocol=http
-
-# A list of the glance api servers available to nova. Prefix
-# with https:// for ssl-based glance api servers.
-# ([hostname|ip]:port) (list value)
-glance_api_servers=$glance_host:$glance_port
-#glance_api_servers=192.168.0.1:9292
-
-# Allow to perform insecure SSL (https) requests to glance (boolean value)
-#glance_api_insecure=false
-
-# Cache glance images locally
-#cache_images=true
-# Number retries when downloading an image from glance (integer value)
-#glance_num_retries=0
+rpc_backend = rabbit
 
 ###############################
 # Type of network APIs to use #
@@ -232,6 +181,12 @@ linuxnet_interface_driver=nova.network.linux_net.LinuxOVSInterfaceDriver
 # For Neutron and OVS, use: nova.virt.firewall.NoopFirewallDriver (since this is handled by Neutron)
 ###firewall_driver=nova.virt.libvirt.firewall.IptablesFirewallDriver
 firewall_driver=nova.virt.firewall.NoopFirewallDriver
+
+#####################################################
+# Default pool when doing "nova floating-ip-create" #
+#####################################################
+# This should match the name of your external network
+default_floating_pool=ext-net
 
 #######################
 # NETWORK (linux net) #
@@ -264,31 +219,6 @@ firewall_driver=nova.virt.firewall.NoopFirewallDriver
 # Only first nic of vm will get default gateway from dhcp server
 #use_single_default_gateway=false
 
-###########
-# Neutron #
-###########
-# This is the URL of your neutron server:
-neutron_url=http://{{ controller_ip }}:9696
-neutron_auth_strategy=keystone
-neutron_admin_tenant_name=service
-neutron_admin_username=neutron
-neutron_admin_password={{ neutron_identity_password }}
-# This is the URL of your Keystone server
-neutron_admin_auth_url=http://{{ controller_ip }}:35357/v2.0
-
-# What's below is only needed for nova-compute.
-
-# Set flag to indicate Neutron will proxy metadata requests
-# and resolve instance ids. This is needed to use neutron-metadata-agent
-# (instead of the metadata server of nova-api,
-# which doesn't work with neutron) (boolean value)
-service_neutron_metadata_proxy=True
-
-# Shared secret to validate proxies Neutron metadata requests
-# This password should match what is in /etc/neutron/metadata_agent.ini
-# (string value)
-neutron_metadata_proxy_shared_secret={{ shared_secret }}
-
 #################
 # NOVNC CONSOLE #
 #################
@@ -300,10 +230,10 @@ neutron_metadata_proxy_shared_secret={{ shared_secret }}
 # Do not forget to restart Nova daemons and restart your VMs if you want to use
 # NoVNC form now on (VMs video card needs to be attached to a console type, and
 # they can accept only one video card at a time).
-vnc_enabled=false
-#novncproxy_base_url=http://192.168.0.1:6080/vnc_auto.html
+vnc_enabled=true
+novncproxy_base_url=http://{{ controller_external_ip }}:6080/vnc_auto.html
 # Change vncserver_proxyclient_address and vncserver_listen to match each compute host
-#vncserver_proxyclient_address=127.0.0.1
+vncserver_proxyclient_address="$my_ip"
 vncserver_listen=0.0.0.0
 vnc_keymap="en-us"
 
@@ -325,20 +255,24 @@ vnc_keymap="en-us"
 #quota_ram=51200
 # number of floating ips allowed per project (integer value)
 #quota_floating_ips=10
+#quota_fixed_ips=-1
 # number of metadata items allowed per instance (integer value)
 #quota_metadata_items=128
 # number of injected files allowed (integer value)
 #quota_injected_files=5
 # number of bytes allowed per injected file (integer value)
 #quota_injected_file_content_bytes=10240
+
 # number of bytes allowed per injected file path (integer value)
-#quota_injected_file_path_bytes=255
+#quota_injected_file_path_length=255
 # number of security groups per project (integer value)
 #quota_security_groups=10
 # number of security rules per security group (integer value)
 #quota_security_group_rules=20
 # number of key pairs per user (integer value)
 #quota_key_pairs=100
+#quota_server_groups=10
+#quota_server_group_members=10
 # number of seconds until a reservation expires (integer value)
 #reservation_expire=86400
 # count of reservations until usage is refreshed (integer value)
@@ -347,6 +281,102 @@ vnc_keymap="en-us"
 #max_age=0
 # default driver to use for quota checks (string value)
 #quota_driver=nova.quota.DbQuotaDriver
+
+####################
+# VOLUMES / CINDER #
+####################
+# The full class name of the volume API class to use (string value)
+#volume_api_class=nova.volume.cinder.API
+
+[oslo_messaging_rabbit]
+############
+# RABBITMQ #
+############
+rabbit_host = {{ controller_ip }}
+#fake_rabbit=false
+#rabbit_virtual_host=/
+rabbit_userid = "{{ rabbit_user }}"
+rabbit_password = "{{ rabbit_password }}"
+#rabbit_port=5672
+#rabbit_use_ssl=false
+#rabbit_retry_interval=1
+
+[oslo_concurrency]
+lock_path=/var/lock/nova
+
+[cinder]
+#catalog_info=volume:cinder:publicURL
+#endpoint_template=<None>
+#os_region_name=<None>
+#ca_certificates_file=<None>
+#http_retries=3
+#http_timeout=<None>
+
+# Allow to perform insecure SSL requests to cinder (boolean value)
+#api_insecure=false
+
+# Allow attach between instance and volume in different
+# availability zones. (boolean value)
+#cross_az_attach=true
+
+###########
+# LIBVIRT #
+###########
+[libvirt]
+# Libvirt handlers for remote volumes. (list value)
+#volume_drivers=iscsi=nova.virt.libvirt.volume.LibvirtISCSIVolumeDriver,iser=nova.virt.libvirt.volume.LibvirtISERVolumeDriver,local=nova.virt.libvirt.volume.LibvirtVolumeDriver,fake=nova.virt.libvirt.volume.LibvirtFakeVolumeDriver,rbd=nova.virt.libvirt.volume.LibvirtNetVolumeDriver,sheepdog=nova.virt.libvirt.volume.LibvirtNetVolumeDriver,nfs=nova.virt.libvirt.volume.LibvirtNFSVolumeDriver,aoe=nova.virt.libvirt.volume.LibvirtAOEVolumeDriver,glusterfs=nova.virt.libvirt.volume.LibvirtGlusterfsVolumeDriver,fibre_channel=nova.virt.libvirt.volume.LibvirtFibreChannelVolumeDriver,scality=nova.virt.libvirt.volume.LibvirtScalityVolumeDriver
+
+# Inject the admin password at boot time, without an agent.
+#inject_password=false
+
+##########
+# GLANCE #
+##########
+[glance]
+host={{ controller_ip }}
+port=9292
+protocol=http
+
+# A list of the glance api servers available to nova. Prefix
+# with https:// for ssl-based glance api servers.
+# ([hostname|ip]:port) (list value)
+api_servers=$host:$port
+#api_servers=192.168.0.1:9292
+
+# Allow to perform insecure SSL (https) requests to glance (boolean value)
+#glance_api_insecure=false
+
+#num_retries=0
+
+# Cache glance images locally
+#cache_images=true
+# Number retries when downloading an image from glance (integer value)
+#glance_num_retries=0
+
+###########
+# Neutron #
+###########
+
+[neutron]
+# This is the URL of your neutron server:
+url = http://{{ controller_ip }}:9696
+auth_strategy=keystone
+admin_tenant_name=service
+admin_username = neutron
+admin_password = {{ neutron_identity_password }}
+# This is the URL of your Keystone server
+admin_auth_url=http://{{ controller_ip }}:5000/v2.0
+
+# Shared secret to validate proxies Neutron metadata requests
+# This password should match what is in /etc/neutron/metadata_agent.ini
+# (string value)
+metadata_proxy_shared_secret = {{ shared_secret }}
+
+# Set flag to indicate Neutron will proxy metadata requests
+# and resolve instance ids. This is needed to use neutron-metadata-agent
+# (instead of the metadata server of nova-api,
+# which doesn't work with neutron) (boolean value)
+service_neutron_metadata_proxy=True
 
 ############
 # DATABASE #
@@ -461,121 +491,84 @@ connection=mysql://nova:{{ nova_db_password }}@{{ controller_ip }}/nova
 # BAREMETAL #
 #############
 [baremetal]
-# The backend to use for bare-metal database (string value)
 #db_backend=sqlalchemy
-
-# The SQLAlchemy connection string used to connect to the
-# bare-metal database (string value)
-#sql_connection=sqlite:///$state_path/baremetal_$sqlite_db
-
-# Whether baremetal compute injects password or not (boolean value)
-#inject_password=true
-
-# Template file for injected network (string value)
-#injected_network_template=$pybasedir/nova/virt/baremetal/interfaces.template
-
-# Baremetal VIF driver. (string value)
+#sql_connection=sqlite:///$state_path/baremetal_nova.sqlite
 #vif_driver=nova.virt.baremetal.vif_driver.BareMetalVIFDriver
-
-# Baremetal volume driver. (string value)
 #volume_driver=nova.virt.baremetal.volume_driver.LibvirtVolumeDriver
-
-# a list of additional capabilities corresponding to
-# instance_type_extra_specs for this compute host to
-# advertise. Valid entries are name=value, pairs For example,
-# "key1:val1, key2:val2" (list value)
-#instance_type_extra_specs=
-
-# Baremetal driver back-end (pxe or tilera) (string value)
+#flavor_extra_specs=
 #driver=nova.virt.baremetal.pxe.PXE
-
-# Baremetal power management method (string value)
 #power_manager=nova.virt.baremetal.ipmi.IPMI
-
-# Baremetal compute node's tftp root path (string value)
 #tftp_root=/tftpboot
-
-# path to baremetal terminal program (string value)
 #terminal=shellinaboxd
-
-# path to baremetal terminal SSL cert(PEM) (string value)
 #terminal_cert_dir=<None>
-
-# path to directory stores pidfiles of baremetal_terminal
-# (string value)
 #terminal_pid_dir=$state_path/baremetal/console
-
-# maximal number of retries for IPMI operations (integer
-# value)
-#ipmi_power_retry=5
-
-# Default kernel image ID used in deployment phase (string
-# value)
+#ipmi_power_retry=10
 #deploy_kernel=<None>
-
-# Default ramdisk image ID used in deployment phase (string
-# value)
 #deploy_ramdisk=<None>
-
-# Template file for injected network config (string value)
 #net_config_template=$pybasedir/nova/virt/baremetal/net-dhcp.ubuntu.template
-
-# additional append parameters for baremetal PXE boot (string
-# value)
-#pxe_append_params=<None>
-
-# Template file for PXE configuration (string value)
+#pxe_append_params=nofb nomodeset vga=normal
 #pxe_config_template=$pybasedir/nova/virt/baremetal/pxe_config.template
-
-# Timeout for PXE deployments. Default: 0 (unlimited) (integer
-# value)
+#use_file_injection=false
 #pxe_deploy_timeout=0
-
-# ip or name to virtual power host (string value)
+#pxe_network_config=false
+#pxe_bootfile_name=pxelinux.0
+#tile_pdu_ip=10.0.100.1
+#tile_pdu_mgr=/tftpboot/pdu_mgr
+#tile_pdu_off=2
+#tile_pdu_on=1
+#tile_pdu_status=9
+#tile_power_wait=9
 #virtual_power_ssh_host=
-
-# base command to use for virtual power(vbox,virsh) (string
-# value)
-#virtual_power_type=vbox
-
-# user to execute virtual power commands as (string value)
+#virtual_power_ssh_port=22
+#virtual_power_type=virsh
 #virtual_power_host_user=
-
-# password for virtual power host_user (string value)
 #virtual_power_host_pass=
-
-# Do not set this out of dev/test environments. If a node does
-# not have a fixed PXE IP address, volumes are exported with
-# globally opened ACL (boolean value)
+#virtual_power_host_key=<None>
 #use_unsafe_iscsi=false
-
-# iSCSI IQN prefix used in baremetal volume connections.
-# (string value)
 #iscsi_iqn_prefix=iqn.2010-10.org.openstack.baremetal
 
 ##########
 # VMWARE #
 ##########
 [vmware]
-# Name of Integration Bridge (string value)
+#host_ip=<None>
+#host_port=443
+#host_username=<None>
+#host_password=<None>
+#cluster_name=<None>
+#datastore_regex=<None>
+#task_poll_interval=0.5
+#api_retry_count=10
+#vnc_port=5900
+#vnc_port_total=10000
+#use_linked_clone=true
+#wsdl_location=<None>
+#vlan_interface=vmnic0
 #integration_bridge=br-int
+#maximum_objects=100
 
 #########
 # SPICE #
 #########
 [spice]
+# Host on which to listen for incoming requests (string value)
+#html5proxy_host=0.0.0.0
+
+# Port on which to listen for incoming requests (integer value)
+#html5proxy_port=6082
+
 # location of spice html5 console proxy, in the form
 # "http://www.example.com:6082/spice_auto.html" (string value)
-html5proxy_base_url=http://{{ controller_external_ip }}:6082/spice_auto.html
+#html5proxy_base_url=http://127.0.0.1:6082/spice_auto.html
 
 # IP address on which instance spice server should listen (string value)
-server_listen=0.0.0.0
+#server_listen=0.0.0.0
 
 # the address to which proxy clients (like nova-spicehtml5proxy) should connect (string value)
-server_proxyclient_address=$my_ip
+#server_proxyclient_address=$my_ip
 
 # enable spice related features (boolean value)
-enabled=true
+enabled=false
 
 # enable spice guest agent support (boolean value)
 #agent_enabled=true
@@ -583,13 +576,54 @@ enabled=true
 # keymap for spice (string value)
 #keymap=en-us
 
+#######
+# SSL #
+#######
+[ssl]
+# CA certificate file to use to verify connecting clients. (string value)
+#ca_file=<None>
+
+# Certificate file to use when starting the server securely. (string value)
+#cert_file=<None>
+
+# Private key file to use when starting the server securely. (string value)
+#key_file=<None>
+
+#############
+# zookeeper #
+#############
+[zookeeper]
+#address=<None>
+#recv_timeout=4000
+#sg_prefix=/servicegroups
+#sg_retry_interval=5
+
 ######################
 # Keystone authtoken #
 ######################
 [keystone_authtoken]
 auth_uri = http://{{ controller_ip }}:5000
-identity_uri = http://{{ controller_ip }}:35357
-admin_tenant_name = service
-admin_user = nova
-admin_password = {{ nova_identity_password }}
-auth_version = v2.0
+auth_url = http://{{ controller_ip }}:35357
+auth_plugin = password
+project_domain_id = default
+user_domain_id = default
+project_name = service
+username = nova
+password = {{ nova_identity_password }}
+
+[ironic]
+
+# Ironic keystone admin name
+admin_username=admin
+
+#Ironic keystone admin password.
+admin_password=IRONIC_PASSWORD
+
+# keystone API endpoint
+admin_url=http://127.0.0.1:35357/v2.0
+
+# Ironic keystone tenant name.
+admin_tenant_name=admin
+
+# URL for Ironic API endpoint.
+api_endpoint=http://127.0.0.1:6385/v1
