--- a/roles/cinderserver/tasks/main.yml
+++ b/roles/cinderserver/tasks/main.yml
@@ -1,8 +1,9 @@
 - name: ensure cinder packages are installed
-  apt: pkg={{ item }}
+  apt: name={{ item }}
   with_items:
     - cinder-api 
-    - cinder-scheduler 
+    - cinder-scheduler
+    - python-cinderclient
 
 - name: ensure cinder sqlite is deleted
   file: dest=/var/lib/cinder/glance.sqlite state=absent
@@ -15,3 +16,6 @@
   notify:
     - restart cinder services
 
+- name: ensure cinder db is initialized
+  command: /usr/bin/cinder-manage db sync
+  notify: restart cinder services
