--- a/roles/cinderserver/templates/etc/cinder/cinder.conf
+++ b/roles/cinderserver/templates/etc/cinder/cinder.conf
@@ -14,10 +14,6 @@
 # Size of RPC connection pool. (integer value)
 #rpc_conn_pool_size=30
 
-# Modules of exceptions that are permitted to be recreated
-# upon receiving exception data from an rpc call. (list value)
-#allowed_rpc_exception_modules=oslo.messaging.exceptions,nova.exception,cinder.exception,exceptions
-
 # Qpid broker hostname. (string value)
 #qpid_hostname=localhost
 
@@ -47,6 +43,10 @@
 # Whether to disable the Nagle algorithm. (boolean value)
 #qpid_tcp_nodelay=true
 
+# The number of prefetched messages held by receiver. (integer
+# value)
+#qpid_receiver_capacity=1
+
 # The qpid topology version to use.  Version 1 is what was
 # originally used by impl_qpid.  Version 2 includes some
 # backwards-incompatible changes that allow broker federation
@@ -74,51 +74,6 @@
 # consumer cancel notification. (floating point value)
 #kombu_reconnect_delay=1.0
 
-# The RabbitMQ broker address where a single node is used.
-# (string value)
-rabbit_host = {{ controller_ip }}
-
-# The RabbitMQ broker port where a single node is used.
-# (integer value)
-#rabbit_port=5672
-
-# RabbitMQ HA cluster host:port pairs. (list value)
-#rabbit_hosts=$rabbit_host:$rabbit_port
-
-# Connect over SSL for RabbitMQ. (boolean value)
-#rabbit_use_ssl=false
-
-# The RabbitMQ userid. (string value)
-rabbit_userid = {{ rabbit_user }}
-
-# The RabbitMQ password. (string value)
-rabbit_password = {{ rabbit_password }}
-
-# the RabbitMQ login method (string value)
-#rabbit_login_method=AMQPLAIN
-
-# The RabbitMQ virtual host. (string value)
-#rabbit_virtual_host=/
-
-# How frequently to retry connecting with RabbitMQ. (integer
-# value)
-#rabbit_retry_interval=1
-
-# How long to backoff for between retries when connecting to
-# RabbitMQ. (integer value)
-#rabbit_retry_backoff=2
-
-# Maximum number of RabbitMQ connection retries. Default is 0
-# (infinite retry count). (integer value)
-#rabbit_max_retries=0
-
-# Use HA queues in RabbitMQ (x-ha-policy: all). If you change
-# this option, you must wipe the RabbitMQ database. (boolean
-# value)
-#rabbit_ha_queues=false
-
-# If passed, use a fake RabbitMQ provider. (boolean value)
-#fake_rabbit=false
 
 # ZeroMQ bind address. Should be a wildcard (*), an ethernet
 # interface, or IP. The "host" option should point or resolve
@@ -156,15 +111,6 @@ rabbit_password = {{ rabbit_password }}
 # Heartbeat time-to-live. (integer value)
 #matchmaker_heartbeat_ttl=600
 
-# Host to locate redis. (string value)
-#host=127.0.0.1
-
-# Use this port to connect to redis host. (integer value)
-#port=6379
-
-# Password for Redis server (optional). (string value)
-#password=<None>
-
 # Size of RPC greenthread pool. (integer value)
 #rpc_thread_pool_size=64
 
@@ -186,7 +132,7 @@ rabbit_password = {{ rabbit_password }}
 
 # The messaging driver to use, defaults to rabbit. Other
 # drivers include qpid and zmq. (string value)
-#rpc_backend=rabbit
+rpc_backend=rabbit
 
 # The default exchange under which topics are scoped. May be
 # overridden by an exchange name specified in the
@@ -456,7 +402,7 @@ rabbit_password = {{ rabbit_password }}
 #state_path=/var/lib/cinder
 
 # ip address of this host (string value)
-#my_ip=10.0.0.1
+my_ip= {{ ansible_eth1.ipv4.address }}
 
 # default glance hostname or ip (string value)
 glance_host={{ controller_ip }}
@@ -578,7 +524,7 @@ auth_strategy=keystone
 # A list of backend names to use. These backend names should
 # be backed by a unique [CONFIG] group with its options (list
 # value)
-#enabled_backends=<None>
+enabled_backends=lvm
 
 # Whether snapshots count against GigaByte quota (boolean
 # value)
@@ -1842,6 +1788,12 @@ auth_strategy=keystone
 # specifying key/value pairs. (string value)
 #extra_capabilities={}
 
+[lvm]
+
+volume_driver = cinder.volume.drivers.lvm.LVMVolumeDriver
+volume_group = cinder-volumes
+iscsi_protocol = iscsi
+iscsi_helper = tgtadm
 
 [BRCD_FABRIC_EXAMPLE]
 
@@ -1876,6 +1828,8 @@ auth_strategy=keystone
 
 [database]
 
+connection = mysql://cinder:{{ cinder_db_password }}@{{ controller_ip }}/cinder
+
 #
 # Options defined in cinder.openstack.common.db.api
 #
@@ -1898,7 +1852,6 @@ auth_strategy=keystone
 # database (string value)
 # Deprecated group/name - [DEFAULT]/sql_connection
 #connection=sqlite:///$state_path/$sqlite_db
-connection = mysql://cinder:{{ cinder_db_password }}@{{ controller_ip }}/cinder
 
 # timeout before idle sql connections are reaped (integer
 # value)
@@ -1993,157 +1946,30 @@ connection = mysql://cinder:{{ cinder_db_password }}@{{ controller_ip }}/cinder
 
 [keystone_authtoken]
 
+auth_uri = http:// {{ controller_ip }}:5000
+auth_url = http://{{ controller_ip }}:35357
+auth_plugin = password
+project_domain_id = default
+user_domain_id = default
+project_name = service
+username = cinder
+password = {{ cinder_identity_password }}
+
+
+[matchmaker_redis]
+
 #
-# Options defined in keystoneclient.middleware.auth_token
+# Options defined in oslo.messaging
 #
 
-# Prefix to prepend at the beginning of the path. Deprecated,
-# use identity_uri. (string value)
-#auth_admin_prefix=
+# Host to locate redis. (string value)
+#host=127.0.0.1
 
-# Host providing the admin Identity API endpoint. Deprecated,
-# use identity_uri. (string value)
-#auth_host={{ controller_ip }}
+# Use this port to connect to redis host. (integer value)
+#port=6379
 
-# Port of the admin Identity API endpoint. Deprecated, use
-# identity_uri. (integer value)
-#auth_port=35357
-
-# Protocol of the admin Identity API endpoint (http or https).
-# Deprecated, use identity_uri. (string value)
-#auth_protocol=http
-
-# Complete public Identity API endpoint (string value)
-auth_uri=http://{{ controller_ip }}:5000
-
-# Complete admin Identity API endpoint. This should specify
-# the unversioned root endpoint e.g. https://localhost:35357/
-# (string value)
-identity_uri = http://{{ controller_ip }}:35357
-
-# API version of the admin Identity API endpoint (string
-# value)
-#auth_version=<None>
-
-# Do not handle authorization requests within the middleware,
-# but delegate the authorization decision to downstream WSGI
-# components (boolean value)
-#delay_auth_decision=false
-
-# Request timeout value for communicating with Identity API
-# server. (boolean value)
-#http_connect_timeout=<None>
-
-# How many times are we trying to reconnect when communicating
-# with Identity API Server. (integer value)
-#http_request_max_retries=3
-
-# This option is deprecated and may be removed in a future
-# release. Single shared secret with the Keystone
-# configuration used for bootstrapping a Keystone
-# installation, or otherwise bypassing the normal
-# authentication process. This option should not be used, use
-# `admin_user` and `admin_password` instead. (string value)
-#admin_token=<None>
-
-# Keystone account username (string value)
-admin_user = cinder
-
-# Keystone account password (string value)
-admin_password = {{ cinder_identity_password }}
-
-# Keystone service account tenant name to validate user tokens
-# (string value)
-admin_tenant_name = service
-
-# Env key for the swift cache (string value)
-#cache=<None>
-
-# Required if Keystone server requires client certificate
-# (string value)
-#certfile=<None>
-
-# Required if Keystone server requires client certificate
-# (string value)
-#keyfile=<None>
-
-# A PEM encoded Certificate Authority to use when verifying
-# HTTPs connections. Defaults to system CAs. (string value)
-#cafile=<None>
-
-# Verify HTTPS connections. (boolean value)
-#insecure=false
-
-# Directory used to cache files related to PKI tokens (string
-# value)
-#signing_dir=<None>
-
-# Optionally specify a list of memcached server(s) to use for
-# caching. If left undefined, tokens will instead be cached
-# in-process. (list value)
-# Deprecated group/name - [DEFAULT]/memcache_servers
-#memcached_servers=<None>
-
-# In order to prevent excessive effort spent validating
-# tokens, the middleware caches previously-seen tokens for a
-# configurable duration (in seconds). Set to -1 to disable
-# caching completely. (integer value)
-#token_cache_time=300
-
-# Determines the frequency at which the list of revoked tokens
-# is retrieved from the Identity service (in seconds). A high
-# number of revocation events combined with a low cache
-# duration may significantly reduce performance. (integer
-# value)
-#revocation_cache_time=10
-
-# (optional) if defined, indicate whether token data should be
-# authenticated or authenticated and encrypted. Acceptable
-# values are MAC or ENCRYPT.  If MAC, token data is
-# authenticated (with HMAC) in the cache. If ENCRYPT, token
-# data is encrypted and authenticated in the cache. If the
-# value is not one of these options or empty, auth_token will
-# raise an exception on initialization. (string value)
-#memcache_security_strategy=<None>
-
-# (optional, mandatory if memcache_security_strategy is
-# defined) this string is used for key derivation. (string
-# value)
-#memcache_secret_key=<None>
-
-# (optional) indicate whether to set the X-Service-Catalog
-# header. If False, middleware will not ask for service
-# catalog on token validation and will not set the X-Service-
-# Catalog header. (boolean value)
-#include_service_catalog=true
-
-# Used to control the use and type of token binding. Can be
-# set to: "disabled" to not check token binding. "permissive"
-# (default) to validate binding information if the bind type
-# is of a form known to the server and ignore it if not.
-# "strict" like "permissive" but if the bind type is unknown
-# the token will be rejected. "required" any form of token
-# binding is needed to be allowed. Finally the name of a
-# binding method that must be present in tokens. (string
-# value)
-#enforce_token_bind=permissive
-
-# If true, the revocation list will be checked for cached
-# tokens. This requires that PKI tokens are configured on the
-# Keystone server. (boolean value)
-#check_revocations_for_cached=false
-
-# Hash algorithms to use for hashing PKI tokens. This may be a
-# single algorithm or multiple. The algorithms are those
-# supported by Python standard hashlib.new(). The hashes will
-# be tried in the order given, so put the preferred one first
-# for performance. The result of the first hash will be stored
-# in the cache. This will typically be set to multiple values
-# only while migrating from a less secure algorithm to a more
-# secure one. Once all the old tokens are expired this option
-# should be set to a single value for better performance.
-# (list value)
-#hash_algorithms=md5
+# Password for Redis server (optional). (string value)
+#password=<None>
 
 
 [matchmaker_ring]
@@ -2176,3 +2002,7 @@ admin_tenant_name = service
 #key_file=<None>
 
 
+[oslo_messaging_rabbit]
+rabbit_host = {{ controller_ip }}
+rabbit_userid = {{ rabbit_user }}
+rabbit_password = {{ rabbit_password }}
