--- a/roles/cindervolume/tasks/main.yml
+++ b/roles/cindervolume/tasks/main.yml
@@ -1,8 +1,10 @@
 - name: ensure cinder-volume and lvm2 packages are installed
-  apt: pkg={{ item }}
+  apt: name={{ item }}
   with_items:
+    - qemu
     - cinder-volume
     - lvm2
+    - python-mysqldb
 
 - name: ensure physical and group volume are created
   lvg: vg=cinder-volumes pvs={{ physical_device }} vg_options=--force
