--- a/roles/neutron-agents/templates/etc/neutron/dhcp_agent.ini
+++ b/roles/neutron-agents/templates/etc/neutron/dhcp_agent.ini
@@ -9,14 +9,12 @@
 
 # The DHCP agent requires an interface driver be set. Choose the one that best
 # matches your plugin.
-# interface_driver =
-
 # Example of interface_driver option for OVS based plugins(OVS, Ryu, NEC, NVP,
 # BigSwitch/Floodlight)
 interface_driver = neutron.agent.linux.interface.OVSInterfaceDriver
 
 # Name of Open vSwitch bridge to use
-# ovs_integration_bridge = br-int
+ovs_integration_bridge = br-int
 
 # Use veth for an OVS interface or not.
 # Support kernels with limited namespace support
@@ -31,7 +29,9 @@ interface_driver = neutron.agent.linux.interface.OVSInterfaceDriver
 dhcp_driver = neutron.agent.linux.dhcp.Dnsmasq
 
 # Allow overlapping IP (Must have kernel build with CONFIG_NET_NS=y and
-# iproute2 package that supports namespaces).
+# iproute2 package that supports namespaces). This option is deprecated and
+# will be removed in a future release, at which point the old behavior
+# of use_namespaces = True will be enforced.
 use_namespaces = True
 
 # The DHCP server can assist with providing metadata support on isolated
@@ -39,7 +39,7 @@ use_namespaces = True
 # specific host routes to the DHCP request. The metadata service will only
 # be activated when the subnet does not contain any router port. The guest
 # instance must be configured to request host routes via DHCP (Option 121).
-# enable_isolated_metadata = False
+enable_isolated_metadata = False
 
 # Allows for serving metadata requests coming from a dedicated metadata
 # access network whose cidr is 169.254.169.254/16 (or larger prefix), and
@@ -60,7 +60,7 @@ use_namespaces = True
 # dhcp_domain = openstacklocal
 
 # Override the default dnsmasq settings with this file
-# dnsmasq_config_file =
+dnsmasq_config_file = /etc/neutron/dnsmasq-neutron.conf
 
 # Comma-separated list of DNS servers which will be used by dnsmasq
 # as forwarders.
@@ -72,8 +72,8 @@ use_namespaces = True
 # Location to DHCP lease relay UNIX domain socket
 # dhcp_lease_relay_socket = $state_path/dhcp/lease_relay
 
-# Location of Metadata Proxy UNIX domain socket
-# metadata_proxy_socket = $state_path/metadata_proxy
+# Use broadcast in DHCP replies
+# dhcp_broadcast_reply = False
 
 # dhcp_delete_namespaces, which is false by default, can be set to True if
 # namespaces can be deleted cleanly on the host running the dhcp agent.
@@ -81,13 +81,8 @@ use_namespaces = True
 # utility mentioned in https://bugs.launchpad.net/neutron/+bug/1052535 and
 # you are sure that your version of iproute does not suffer from the problem.
 # If True, namespaces will be deleted when a dhcp server is disabled.
-# dhcp_delete_namespaces = False
+dhcp_delete_namespaces = True
 
 # Timeout for ovs-vsctl commands.
 # If the timeout expires, ovs commands will fail with ALARMCLOCK error.
 # ovs_vsctl_timeout = 10
-
-# Limits the dns requests to dnsmasq only to clients which are on its subnet.
-# Useful when a subnet is routed to another one or in the case of an
-# external network.
-# isolate_dns_requests = False
