--- a/roles/openvswitch/tasks/main.yml
+++ b/roles/openvswitch/tasks/main.yml
@@ -16,27 +16,27 @@
 #   ignore_errors: True
 
 - name: Ensure default route is deleted
-  command: /sbin/route del default
+  command: /sbin/ip route del default
   ignore_errors: True
   
 - name: ensure IP address is deleted from external nic
   command: /sbin/ip addr del {{ network_node_external_ip }}/{{ network_node_external_CIDR }} dev {{ ext_net_nic }}
   ignore_errors: True
 
+- name: ensure br-ex is up
+  command: /sbin/ip link set br-ex up
+  
 - name: ensure external interface is added to br-ex
   openvswitch_port: bridge=br-ex port={{ ext_net_nic }} state=present
   notify: restart neutron agents
   ignore_errors: True
 
-- name: ensure br-ex is up
-  command: /sbin/ip link set br-ex up
-  
 - name: ensure IP address is added to external bridge
   command: /sbin/ip addr add {{ network_node_external_ip }}/{{ network_node_external_CIDR }} dev br-ex
   ignore_errors: True
 
 - name: ensure default rule is associated to external bridge
-  command: /sbin/route add -net default gw {{ external_gateway }} dev br-ex
+  command: /sbin/ip route add default via {{ external_gateway }}
   ignore_errors: True
   
 - name: ensure br-ex is configured and external interface added permanently
@@ -58,12 +58,12 @@
 - name: ensure default openvswitch-switch init are created
   command: /sbin/insserv openvswitch-switch 
 
-- name: ensure neutron database is absent
-  mysql_db: name=neutron state=absent
+# - name: ensure neutron database is absent
+#   mysql_db: name=neutron state=absent
 
-- name: ensure neutron database is present
-  mysql_db: name=neutron
+# - name: ensure neutron database is present
+#   mysql_db: name=neutron
 
-- name: ensure neutron database is reinitialized
-  command: neutron-db-manage --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/plugins/ml2/ml2_conf.ini upgrade head
+# - name: ensure neutron database is reinitialized
+#   command: neutron-db-manage --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/plugins/ml2/ml2_conf.ini upgrade head
 
