Make sure Glance DB is using UTF8

--- a/roles/dbserver/templates/etc/my.cnf
+++ b/roles/dbserver/templates/etc/my.cnf
@@ -108,6 +108,7 @@ max_binlog_size         = 100M
 
 default-storage-engine = innodb
 collation-server = utf8_general_ci
+init_connect = 'SET collation_connection = utf8_general_ci'
 init-connect = 'SET NAMES utf8'
 character-set-server = utf8
 
@@ -118,6 +119,7 @@ max_allowed_packet	= 16M
 
 [mysql]
 #no-auto-rehash	# faster start of mysql but no tab completition
+default-character-set = utf8
 
 [isamchk]
 key_buffer		= 16M
