Modificaciones añadiendo python-cryptography >= 1.0 desde testing

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,11 +7,19 @@
     mode=0644
   notify: apt update
 
+- name: Ensure jessie is set as default release
+  copy: >
+    src=etc/apt/apt.conf
+    dest=/etc/apt/apt.conf
+    owner=root
+    group=root
+    mode=0644
+  
 - name: Ensure system is upgraded (It can take a long time)
   apt: upgrade=yes update_cache=yes
 
 - name: Ensure ntp is installed
-  apt: name=ntp
+  apt: name=ntp default_release=jessie
   notify: restart ntp
 
 # - name: Ensure /etc/hosts is properly defined
