Neutron configuration modified (ML2 plugin typo)

--- a/roles/neutron-agents/templates/etc/neutron/metadata_agent.ini
+++ b/roles/neutron-agents/templates/etc/neutron/metadata_agent.ini
@@ -25,7 +25,7 @@ password = {{ neutron_identity_password }}
 nova_metadata_ip = {{ controller_ip }}
 
 # TCP Port used by Nova metadata server
-# nova_metadata_port = 8775
+nova_metadata_port = 8775
 
 # Which protocol to use for requests to Nova metadata server, http or https
 nova_metadata_protocol = http
