--- a/roles/neutronserver/templates/etc/neutron/neutron.conf
+++ b/roles/neutronserver/templates/etc/neutron/neutron.conf
@@ -58,7 +58,7 @@
 # entrypoint name.
 #
 # Example: core_plugin = ml2
-core_plugin = core_plugin = neutron.plugins.ml2.plugin.Ml2Plugin
+core_plugin = neutron.plugins.ml2.plugin.Ml2Plugin
 
 # (ListOpt) List of service plugin entrypoints to be loaded from the
 # neutron.service_plugins namespace. See setup.cfg for the entrypoint names of
