Solving an issue in ml2 configuration

--- a/roles/neutron-agents-compute/templates/etc/neutron/plugins/ml2/ml2_conf.ini
+++ b/roles/neutron-agents-compute/templates/etc/neutron/plugins/ml2/ml2_conf.ini
@@ -4,7 +4,8 @@
 #
 # type_drivers = local,flat,vlan,gre,vxlan
 # Example: type_drivers = flat,vlan,gre,vxlan
-type_drivers = gre
+type_drivers = flat,vlan,gre,vxlan
+
 
 # (ListOpt) Ordered list of network_types to allocate as tenant
 # networks. The default value 'local' is useful for single-box testing
