Temporary solution to #19

--- a/roles/horizon/tasks/main.yml
+++ b/roles/horizon/tasks/main.yml
@@ -3,21 +3,31 @@
   with_items:
     - python-xstatic-magic-search
     - python-xstatic-angular
+
+- name: ensure python-django is installed 
+  apt: name={{ item }} default_release=jessie
+  with_items:
+    - python-django
+    - python-django-appconf           
+    - python-django-babel             
+    - python-django-common            
+    - python-django-compressor        
+    - python-django-pyscss
     
 - name: ensure apache and memcached packages are installed
-  apt: pkg={{ item }} default_release=jessie-backports
+  apt: pkg={{ item }} default_release=jessie
   with_items:
     - memcached
     - apache2
     - libapache2-mod-wsgi
     
-- name: ensure horizon packages are installed from testing (BUG!)
-  apt: pkg={{ item }} default_release=testing state=latest
+- name: ensure horizon packages are installed 
+  apt: pkg={{ item }} default_release=jessie-backports 
   with_items:
     - python-django-horizon
     - openstack-dashboard
     - openstack-dashboard-apache
-
+    
 - name: ensure dashboard is configured
   template: >
     src=etc/openstack-dashboard/local_settings.py
