--- a/site.yml
+++ b/site.yml
@@ -66,6 +66,10 @@
 
 - hosts: controller-nodes
   roles:
+    - role: horizon-temporal
+
+- hosts: controller-nodes
+  roles:
     - role: cinderserver
 
 - hosts: storage-nodes
